k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jbx
  labels:
    name: jbx
    app: jbx-job-automation
